# distributed-systems

./: .gitignore  CMakeLists.txt
pa1-lib/: CMakeLists.txt  main.c
pa1-lib/include/: context.h  ipc_context.h  message.h
pa1-lib/src/: context.c  ipc.c  ipc_context.c  logger.c  logger_event.c  message.c
pa1-lib/tests/: ChannelTest.c  IpcContextTest.c  IpcTest.c  main.c
pa1-starter/: CMakeLists.txt  pa1.h
pa2-lib/: CMakeLists.txt  main.c
pa2-lib/include/: channel.h  context.h  done_state.h  ipc_context.h  logger.h  logger_event.h  pipe.h  process_state.h  reporting_state.h  running_state.h  started_state.h
pa2-lib/include/process/: done_state.h
pa2-lib/src/: channel.c  context.c  done_state.c  ipc.c  logger_channel.c  logger_event.c  message.c  pa23.c  process_state.c  reporting_state.c  running_state.c  started_state.c
pa2-lib/src/process/: done_state.c  process_state.c  reporting_state.c  running_state.c  started_state.c
pa2345-starter/: CMakeLists.txt
pa3-lib/: CMakeLists.txt  main.c
pa3-lib/include/: logger.h  logger_channel.h  process_state.h
pa3-lib/src/: context.c  ipc_context.c  logger.c  logger_event.c  pa23.c  process_state.c  reporting_state.c  running_state.c  started_state.c
pa4-lib/: CMakeLists.txt  main.c
pa4-lib/include/: context.h  ipc_ctx.h  logger.h  message.h  queue.h  state.h  state_done.h  state_half_done.h  state_pending_cs.h  state_release_cs.h  state_request_cs.h  state_running.h  state_running_cs.h  state_started.h
pa4-lib/src/: context.c  done_state.c  ipc.c  ipc_context.c  logger.c  message.c  pa2345.c  queue.c  reporting_state.c  state.c  state_done.c  state_half_done.c  state_pending_cs.c  state_release_cs.c  state_request_cs.c  state_running.c  state_running_cs.c  state_started.c
